--- a/MyFragment/app/src/main/res/layout/fragment_main.xml
+++ b/MyFragment/app/src/main/res/layout/fragment_main.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FAE5D9"
-    android:orientation="vertical"
-    tools:context=".MainFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Main Fragment"
-        android:textSize="50sp" />
+        android:layout_height="500dp"
+        android:background="#FAE5D9"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:context=".MainFragment">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="화면 전환"
-        app:backgroundTint="#41C5B1" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Main Fragment"
+            android:textSize="50sp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="화면 전환"
+            app:backgroundTint="#41C5B1" />
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
