--- a/MyListView/app/src/main/res/layout/activity_main.xml
+++ b/MyListView/app/src/main/res/layout/activity_main.xml
@@ -17,19 +17,25 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="100dp"
             android:layout_gravity="center">
             <ImageView
                 android:id="@+id/clicked_img"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                 />
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/clicked_tv"
+                android:gravity="center_vertical"
+                android:textSize="17dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/black" />
 
         <ListView
             android:id="@+id/list"
