--- a/MyListView/app/src/main/res/layout/item_list.xml
+++ b/MyListView/app/src/main/res/layout/item_list.xml
@@ -3,7 +3,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="120dp"
     android:layout_margin="10dp"
     android:orientation="horizontal">
 
@@ -12,7 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/name"
