--- a/MyListView/app/src/main/res/layout/activity_member.xml
+++ b/MyListView/app/src/main/res/layout/activity_member.xml
@@ -28,7 +28,7 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="24dp"
             android:text="이름"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -40,13 +40,13 @@
             android:id="@+id/comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="30dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             android:background="@drawable/roundsquare"
+            android:gravity="center"
+            android:padding="30dp"
             android:text="왈라왈라왈라와라 설명"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
