--- a/MyKakaoLogin/app/src/main/res/layout/activity_main.xml
+++ b/MyKakaoLogin/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="102dp"
-        android:layout_marginEnd="103dp"
-        android:layout_marginBottom="137dp"
-        android:src="@drawable/kakao_login_medium_narrow" />
+
+    <!--    ### 버튼-->
+    <com.kakao.usermgmt.LoginButton
+        android:id="@+id/login_btn_kakaologin"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:layout_centerInParent="true"/>
+
 
 </RelativeLayout>
