--- a/MyKakaoLogin/app/src/main/res/layout/activity_main.xml
+++ b/MyKakaoLogin/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
 
 
     <!--    ### 버튼-->
     <com.kakao.usermgmt.LoginButton
-        android:id="@+id/login_btn_kakaologin"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/btn_kakao_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btn_custom_login_out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="카카오 로그아웃" />
 
-</RelativeLayout>
+</LinearLayout>
